--- a/src/css/app.css
+++ b/src/css/app.css
@@ -89,12 +89,11 @@ a {
 }
 
 .movies-grid {
-  margin: 0 32px;
+  margin: 0 32px 32px;
   background: #FFFFFF;
   box-shadow: 1px 1px 8px -1px rgba(0, 0, 0, 0.4);
   font-size: 12px;
   border-collapse: collapse;
-  position: absolute;
   min-width: calc(100% - 64px);
   overflow: auto;
 }
@@ -162,5 +161,5 @@ a {
 }
 
 .header__plot-words, .movie__plot-words {
-  max-width: 120px;
+  max-width: 160px;
 }
